Don't close if the input is wrong

Display a visual error message instead, users expect the feedback on the
GUI.

BUG: 372277